upgrade:: endpoint device seft to server
